test/files/run/macro-repl-dontexpand.check

scala> def bar1(c: scala.reflect.macros.blackbox.Context) = ???
defined def bar1(c: scala.reflect.macros.blackbox.Context): Nothing

scala> def foo1 = macro bar1
                        ^
       error: macro implementation reference has wrong shape. required:
       macro [<static object>].<method name>[[<type args>]] or
       macro [<macro bundle>].<method name>[[<type args>]]

scala> def bar2(c: scala.reflect.macros.whitebox.Context) = ???
defined def bar2(c: scala.reflect.macros.whitebox.Context): Nothing

scala> def foo2 = macro bar2
                        ^
       error: macro implementation reference has wrong shape. required:
       macro [<static object>].<method name>[[<type args>]] or
       macro [<macro bundle>].<method name>[[<type args>]]

scala> :quit
